:sparkles: Started porting to XinexLib instead of Architectury API.